# iievi

./: .gitignore  CONTRIBUTING.md  Makefile  RUNBOOK.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  podman-compose.yml  turbo.json
.claude/memory/: common-mistakes.md  design-conventions.md  quality-checks.md  tech-stack.md  workflow-rules.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260709_1739_initial_schema.py  20260709_1740_apply_rls.py  20260709_1745_performance_indexes.py  20260710_0303_onboarding_and_brandkit.py  20260710_0900_gateway_auth_primitives.py  20260710_1400_ai_jobs_and_webhooks.py  20260715_1000_conversation_engine_and_notifications.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  health.py
apps/api/app/core/: __init__.py  ai.py  axiom.py  circuit.py  config.py  context.py  csrf.py  deprecation.py  exceptions.py  logging.py  middleware.py  ops.py  permissions.py  plans.py  r2_service.py  ratelimit.py  redis.py  schemas.py  security.py  security_headers.py  sentry.py
apps/api/app/db/: __init__.py  base.py  engine.py  models.py
apps/api/app/gateway/: __init__.py  dependencies.py
apps/api/app/modules/ai/: __init__.py  context_service.py  intent_classification_service.py  intent_detection_service.py  langfuse_client.py  system_prompt_builder.py
apps/api/app/modules/analytics/: router.py
apps/api/app/modules/audit/: service.py
apps/api/app/modules/auth/: router.py  schemas.py  service.py
apps/api/app/modules/billing/: router.py  usage_service.py
apps/api/app/modules/channels/: __init__.py  whatsapp_client.py
apps/api/app/modules/conversations/: __init__.py  booking_service.py  delivery.py  outreach_service.py  state_machine.py
apps/api/app/modules/credentials/: router.py  service.py
apps/api/app/modules/flags/: router.py
apps/api/app/modules/images/: __init__.py  client.py
apps/api/app/modules/leads/: __init__.py  router.py
apps/api/app/modules/notifications/: __init__.py  email_service.py  preferences_router.py  router.py  service.py  whatsapp_channel.py
apps/api/app/modules/notifications/templates/: _base.html  credential_expired.html  lead_handoff.html  notification.html  payment_failure.html  post_failed.html  post_published.html  weekly_performance.html  welcome.html
apps/api/app/modules/onboarding/: extraction_service.py  router.py  session_service.py  state_machine.py
apps/api/app/modules/posts/: __init__.py  copy_generation_service.py  router.py
apps/api/app/modules/posts/publishers/: __init__.py  base.py  linkedin.py  meta.py  tiktok.py
apps/api/app/modules/profiles/: categories.py  completeness.py  hooks.py  router.py
apps/api/app/modules/realtime/: __init__.py  events.py  router.py
apps/api/app/modules/webhooks/: __init__.py  admin_router.py  billing_router.py  meta_router.py  service.py
apps/api/app/services/: __init__.py  feature_flags.py
apps/api/app/worker/: __init__.py  ai_worker.py  beat_schedule.py  billing_worker.py  celery_app.py  db.py  maintenance.py  message_worker.py  notification_worker.py  outreach_worker.py  post_worker.py  publish_worker.py  reports_worker.py  tasks.py
apps/api/tests/: conftest.py  test_ai_layer.py  test_categories.py  test_circuit_breaker.py  test_conversation_state_machine.py  test_feature_flags.py  test_gateway.py  test_health.py  test_notification_dispatch.py  test_observability.py  test_performance.py  test_post_chain.py  test_profiles_onboarding.py  test_publishers.py  test_security.py  test_webhooks.py
apps/api/tests/db/: __init__.py  test_conversation_engine_db.py  test_gateway_db.py  test_profiles_db.py  test_rls.py  test_webhooks_db.py
apps/api/tests/hallucination/: __init__.py  conftest.py  harness.py  test_universal_invariants.py
apps/marketing/: package-lock.json  package.json
apps/marketing/src/: i18n.ts  routeTree.gen.ts  styles.css
apps/marketing/src/components/linen/: Accordion.tsx  Button.tsx  CTASection.tsx  ChatMockup.tsx  Container.tsx  DashboardMockup.tsx  FadeIn.tsx  Footer.tsx  GeneratingPostMockup.tsx  Input.tsx  Nav.tsx  PlaybookMockup.tsx  PlaybookProgress.tsx  SectionLabel.tsx  Stat.tsx  Tabs.tsx  ThemeToggle.tsx
apps/marketing/src/components/ui/: skeleton.tsx
apps/marketing/src/hooks/: useTheme.ts
apps/marketing/src/lib/: i18n.ts  solutionPlaybookData.ts
apps/marketing/src/routes/: __root.tsx  _marketing.about.tsx  _marketing.blog.$slug.tsx  _marketing.blog.tsx  _marketing.demo.tsx  _marketing.faq.tsx  _marketing.features.tsx  _marketing.help.tsx  _marketing.index.tsx  _marketing.pricing.tsx  _marketing.privacy.tsx  _marketing.register.tsx  _marketing.solutions.$category.tsx  _marketing.solutions.index.tsx  _marketing.terms.tsx  _marketing.tsx
apps/web/: .gitignore  next.config.mjs  package.json  sentry.edge.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/public/: manifest.json
apps/web/src/: instrumentation.ts  middleware.ts
apps/web/src/__tests__/: auth-a11y.test.tsx
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(marketing)/: layout.tsx
apps/web/src/app/(onboarding)/: layout.tsx
apps/web/src/components/: StatusPill.test.tsx  StatusPill.tsx
apps/web/src/components/admin/: FlagRow.tsx  LevelBadge.tsx
apps/web/src/hooks/: useCapabilities.ts  useLeadsInfinite.ts  useLogout.ts  usePlanLimits.ts  useProfile.ts  useTheme.ts  useUnreadLeads.ts
apps/web/src/lib/: animations.ts  api.ts  auth-context.tsx  auth-state.ts  cn.ts  csrf.ts  perf.ts  query-client.ts  sentry-scrub.ts  status.ts  theme.ts  time.ts  ui-events.ts  websocket.tsx
docs/infra/: cloudflare.md  doppler.md  github.md  hetzner.md  observability.md
infra/db/init/: 01-rls.sql
infra/logrotate/: iievi
infra/nginx/: iievi-api.conf
infra/scripts/: backup-db.sh  harden-vps.sh
infra/supervisor/: iievi.conf
(+63 files in other folders)
