[project]
name = "iievi-api"
version = "1.0.0"
description = "IIEVI API — multi-tenant AI growth platform for service businesses"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "sentry-sdk[fastapi,sqlalchemy,celery]>=2.18.0",
    "cryptography>=49.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.13.0",
    "bleach>=6.4.0",
    "google-genai>=1.38.0",
    "langfuse>=4.13.2",
    "boto3>=1.43.45",
    "pillow>=12.3.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "resend>=2.33.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.1.0",
    "py-spy>=0.4.0",
    "flower>=2.0.1",
    "fakeredis>=2.36.2",
    "types-bleach>=6.4.0.20260607",
    "boto3-stubs>=1.43.45",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ASYNC", # flake8-async
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations — enforce full type hints
]
ignore = [
    "ANN401", # Any in **kwargs of framework hooks — still banned in our code by review
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]  # asserts and relaxed annotations in tests
# conftest must set env vars BEFORE importing app modules (config validates at import)
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
# NOTE: explicit `Any` in our code is banned by ruff ANN401 + review. mypy's
# disallow_any_explicit is intentionally OFF: the pydantic plugin synthesizes
# Any-typed internals for every BaseModel and floods it with false positives.
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "flower.*", "kombu.*", "passlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# celery signal/task decorators are untyped; the handlers themselves stay typed
module = ["app.worker.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
markers = [
    "hallucination: real-provider grounding invariants (needs GEMINI_API_KEY; CI-gated)",
]

[tool.coverage.run]
omit = ["tests/*"]
